set start date to 3pm and end date to 3am. default value for select

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
+    <script src="./../node_modules/print-js/dist/pr int.js"></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -42,6 +43,33 @@
           }
       });
     }
+
+    function getDateOfThisDay(today)
+    {
+      var date;
+        var yesterday= new Date(today.valueOf() - 1000*60*60*24);
+        if(today.getHours <=3)
+        {
+            yesterday.setHours(3,0,0,0);
+            date = yesterday;
+        }
+        else
+        {
+            today.setHours(14,0,0,0);
+            date = today;
+        }
+        
+        
+        console.log("yesterday:"+yesterday);
+
+        console.log("today:" +today);
+
+        console.log("date:" +date);
+
+        return date;
+    }
+
+
 
     function customAlert(message)
     {
